--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@ plugins {
 	id 'org.springframework.boot' version '2.6.3'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id "org.sonarqube" version "4.2.1.3168"
 }
+
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -16,6 +18,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
+sonar { 
+ properties {
+  property "sonar.projectkey","Aghiousach_microservicio-java"
+  property "sonar.organization","aghiousach23"
+  property "sonar.host.url","https://sonarcloud.io/"
+  property "sonar.projectname","microservicio-java"
+  }	 
+}	
 
 test {
 	useJUnitPlatform()
