--- a/.github/workflows/TareaAghioUsach23.yml
+++ b/.github/workflows/TareaAghioUsach23.yml
@@ -23,4 +23,9 @@ jobs:
         run: |
          chmod +x gradlew
          ./gradlew buil sonar -Dsonar.token=${{ secrets.TOKENSONARV1 }}
-    
+      - name: Set trace-start
+        id: set-trace-start
+        run: |
+           echo ::set-output name=trace-start::$(date +%s)
+    outputs:
+      trace-start: ${{ steps.set-trace-start.outputs.trace-start }}
