--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,10 @@ dependencies {
 }
 sonar { 
  properties {
-  property "sonar.projectkey","Aghiousach_microservicio-java"
+  property "sonar.projectKey","Aghiousach_microservicio-java"
   property "sonar.organization","aghiousach23"
   property "sonar.host.url","https://sonarcloud.io/"
-  property "sonar.projectname","microservicio-java"
+  property "sonar.projectName","microservicio-java"
   }	 
 }	
 
