--- a/.github/workflows/TareaAghioUsach23.yml
+++ b/.github/workflows/TareaAghioUsach23.yml
@@ -22,6 +22,6 @@ jobs:
       - name: SonarCloud Analysis
         run: |
          chmod +x gradlew
-         ./gradlew buil sonar -Dsonar.token=${{ secrets.TOKENAGHIOSONAR1 }}
+         ./gradlew build sonar -Dsonar.token=${{ secrets.TOKENAGHIOSONAR1 }}
      
    
